# AniWorld-Downloader-v1-crashx

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  aniworld  aniworld.cmd  install-launcher.ps1  install-launcher.sh  pyproject.toml
docs/: CUSTOMIZATION.md  FIRST-SETUP.md  MIGRATION.md  SERVER-DEPLOYMENT.md  USAGE.md  WIKI.md
docs/de/: CUSTOMIZATION.md  FIRST-SETUP.md  MIGRATION.md  SERVER-DEPLOYMENT.md  USAGE.md  WIKI.md
examples/aniworld_to/: aniworld_episode_muxing.py
src/aniworld/: arguments.py  config.py  entry.py  logger.py  menu.py  providers.py  search.py
src/aniworld/extractors/provider/: doodstream.py  vidara.py  vidhide.py  voe.py
src/aniworld/models/: __init__.py
src/aniworld/models/common/: common.py
src/aniworld/models/filmpalast_to/: __init__.py  episode.py
src/aniworld/models/s_to/: episode.py
src/aniworld/playwright/: captcha.py
src/aniworld/web/: app.py  captcha.py  db.py
src/aniworld/web/static/: app.js  autosync.js  background.js  captcha.js  custom-selects.js  diagnostics.js  i18n.js  library.js  link-import.js  live-updates.js  maintenance.js  manifest.webmanifest  provider-health.js  queue.js  settings.js  shell.js  style.css  sw.js
src/aniworld/web/templates/: _series_modal.html  autosync.html  base.html  captcha.html  favorites.html  index.html  library.html  link_import.html  login.html  maintenance.html  provider_health.html  radar.html  settings.html  setup.html  stats.html  timeline.html
