[project]
name = "aniworld"
version = "1+crashx"
authors = [{ name = "Phoenixthrush UwU", email = "contact@phoenixthrush.com" }]
maintainers = [
  { name = "Phoenixthrush UwU", email = "contact@phoenixthrush.com" },
]
description = "AniWorld-Downloader is a command-line tool for downloading and streaming movies and series."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "niquests",
  "npyscreen",
  "ffmpeg-python",
  "yt-dlp",
  "python-dotenv",
  "rich",
  "fake-useragent",
  "flask",
  "flask-wtf",
  "authlib",
  "requests",
  "waitress",
  "packaging",
  "cryptography",
  "patchright",
  'windows-curses<3.14; sys_platform == "win32" and python_version < "3.14"', # npyscreen on Windows
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/easycrashx-nex/AniWorld-Downloader-v1-crashx"
changelog = "https://github.com/easycrashx-nex/AniWorld-Downloader-v1-crashx/commits/main"
documentation = "https://readthedocs.org"
bugs = "https://github.com/easycrashx-nex/AniWorld-Downloader-v1-crashx/issues"
issues = "https://github.com/easycrashx-nex/AniWorld-Downloader-v1-crashx/issues"
tracker = "https://github.com/easycrashx-nex/AniWorld-Downloader-v1-crashx/issues"
download = "https://github.com/easycrashx-nex/AniWorld-Downloader-v1-crashx"

[tool.setuptools.package-data]
aniworld = ["web/templates/*.html", "web/static/*.css", "web/static/*.js"]

[project.scripts]
aniworld = "aniworld.__main__:main"
